--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <div class="contacts-container">
                 <h5 class="section-titles"> Contacts </h5>
                 <div class="contacts-wrapper">
-                    <a href="mailto:anthonyaliduh@gmail.com"> anthonyaliduh@gmail.com </a>
-                    <a href="tel:+2348105466018"> +2348105466018 </a>
+                    <a href="mailto:johndoe@gmail.com">johndoe@gmail.com </a>
+                    <a href="tel:+2348012345678"> +2348012345678 </a>
                 </div>
             </div>
 
